deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: touchhle-trunk-builds
spec:
  selector:
    app: touchhle-trunk-builds
  ports:
    - port: 80
      targetPort: 3000
